--- a/libraries/ATransferProtocol2/ATransferProtocolSpecV1.html
+++ b/libraries/ATransferProtocol2/ATransferProtocolSpecV1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
 
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>A Transfer Protocol (ATP) from Frank Cohen and Votsh.com</title></head><body>
 <h1>A Transfer Protocol (ATP)</h1>
 Design Specification Document<br>
@@ -76,7 +77,7 @@ status when all chucks are received.<br>
 <img style="border: 0px solid ; width: 360px; height: 278px;" alt="State diagram showing sync/async conversation between lead peer and peer units" src="http://votsh.files.wordpress.com/2014/03/atp3.jpg"><br>
 <h3>Transfer Request</h3>
 <ul>
-  <li>AUID - A Unique ID, 16 bit value, hash of the request type
+  <li>AUID - A Unique ID, 32 bit value, hash of the character array "ATP", the request type
 (first 2 bits set at 0,0), PAN ID, current time in milliseconds, and
 count of TransferRequest objects created. While a hash introduces the
 possibility of collissions, AUID is a hash for situations where a peer
@@ -103,10 +104,13 @@ peer<br>
 
 <h3>Chunk Request</h3>
 <ul>
-  <li>AUID - 16 bit value, a unique identifier from Transfer Request, with the first 2 bits set at 0,1, identifying the request type<br>
+  <li>AUID - 32 bit value, a hash of the character array "ATP", a unique identifier from Transfer Request, with the first 2 bits set at 0,1, identifying the request type<br>
 </li>
   <li>Start byte offset - 32 bit unsigned value, starting address of transfer</li>
-  <li>Length - 16 bit unsigned value, quantity of 8 bit unsigned values to transfer, if compression is used the length is the quantity of values after compression</li>
+  <li>Length
+- 16 bit unsigned value, quantity of 8 bit unsigned values to transfer,
+if compression is used the length is the quantity of values after
+compression</li>
   <li>Transfer types - Four 2-bit values packed into 1 8-bit unsigned value:<br>
 PCT - Preferred compression technique - compression: 0 = none, 1 = RTE, 2 = Lempel<br>
 PET - Preferred encryption technique - 0 = none, 1 = encryption engine 1, 2 engine 2, etc.<br>
@@ -118,7 +122,7 @@ Unused<br>
 <h3>Chunk Response<br>
 </h3>
 <ul>
-<li>AUID - 16 bit value, a unique identifier from Transfer Request, , with the first 2 bits set at 1,0 identifying the response type</li><li>Status - Success, Failed during transit, failed checksum</li>
+<li>AUID - 32 bit value, a hash of the character array "ATP", a unique identifier from Transfer Request, , with the first 2 bits set at 1,0 identifying the response type</li><li>Status - Success, Failed during transit, failed checksum</li>
   <li>Start byte offset - 32 bit unsigned value, starting address of transfer</li>
   <li>Length
 - 16 bit unsigned value, quantity of 8 bit unsigned values to transfer,
