--- a/libraries/ATransferProtocol2/ATransferProtocolSpecV1.html
+++ b/libraries/ATransferProtocol2/ATransferProtocolSpecV1.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
 
-
-
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>A Transfer Protocol (ATP) from Frank Cohen and Votsh.com</title></head><body>
-<h1>A Transfer Protocol (ATP)</h1>
+#A Transfer Protocol (ATP)
 Design Specification Document<br>
 <a href="http://votsh.com/bio-for-frank-cohen/">Frank Cohen</a>, fcohen@votsh.com<br>
 Early Draft, March 14, 2014<br>
